# TheEncryptedVault

./: .env.example  .gitignore  README.md  pyproject.toml
plans/: design.md
src/encrypted_vault/: __init__.py  config.py  llm_factory.py
src/encrypted_vault/agents/: __init__.py  base_agent.py  enforcer.py  infiltrator.py  saboteur.py  scholar.py  tools.py
src/encrypted_vault/db/: __init__.py  base_repository.py  chroma_repository.py  in_memory_repository.py
src/encrypted_vault/graph/: __init__.py  builder.py  nodes.py  runner.py
src/encrypted_vault/memory/: __init__.py  base_memory.py  in_memory_memory.py  sqlite_memory.py
src/encrypted_vault/services/: __init__.py  chat_service.py  container.py  game_service.py  memory_service.py  vault_service.py
src/encrypted_vault/state/: __init__.py  agent_models.py  chat_models.py  enums.py  game_state.py  vault_models.py
src/encrypted_vault/ui/: __init__.py  app.py
tests/: __init__.py  test_db.py  test_graph.py  test_memory.py  test_services.py  test_state.py
